--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
         </div>
         <div></div>
     </header>
-    
+        <main>
+            <ol>
+                <li><img src="imagen1.jpg" alt="Descripción de la imagen 1"></li>
+                <li><img src="imagen2.jpg" alt="Descripción de la imagen 2"></li>
+                <li><img src="imagen3.jpg" alt="Descripción de la imagen 3"></li>
+                <li><img src="imagen4.jpg" alt="Descripción de la imagen 4"></li>
+                <li><img src="imagen5.jpg" alt="Descripción de la imagen 5"></li>
+                <li><img src="imagen6.jpg" alt="Descripción de la imagen 6"></li>
+            </ol>   
+        </main>   
 </body>
 </html>
