--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
         </div>
         <div></div>
     </header>
-        <main>
-            <ol>
-                <li><img src="imagen1.jpg" alt="Descripción de la imagen 1"></li>
-                <li><img src="imagen2.jpg" alt="Descripción de la imagen 2"></li>
-                <li><img src="imagen3.jpg" alt="Descripción de la imagen 3"></li>
-                <li><img src="imagen4.jpg" alt="Descripción de la imagen 4"></li>
-                <li><img src="imagen5.jpg" alt="Descripción de la imagen 5"></li>
-                <li><img src="imagen6.jpg" alt="Descripción de la imagen 6"></li>
-            </ol>   
+        <div>
+            <main class="Columna">
+            <img src="./img/Absolute_Reality_v16_Crame_una_nave_espacial_futurista_que_se_0.jpg" alt="Descripción de la imagen 1">
+            <img src="./img/Absolute_Reality_v16_Crame_una_nave_espacial_futurista_que_se_1.jpg" alt="Descripción de la imagen 2">
+            <img src="./img/nave1.jpg" alt="Descripción de la imagen 3">
+            <img src="./img/nave2.jpg" alt="Descripción de la imagen 4">
+            <img src="./img/nave4.jpg" alt="Descripción de la imagen 5"> 
+            <img src="./img/Absolute_Reality_v16_Crame_una_nave_espacial_futurista_que_se_1.jpg" alt="Descripción de la imagen 6">
+            </div>
+
+        
         </main>   
 </body>
 </html>
