--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <header>
         <div class="header_left">
             <a href="index.html">
-                <img class="logo"/>
-                <img src="">
+                <img src="/img/logo.png" width="250" height="250" class=" logo">
             </a>
         
         </div>
