--- a/index.html
+++ b/index.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delta Space</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
     <header>
         <div class="header_left">
             <a href="index.html">
                 <img src="/img/logo.png" width="250" height="250" class=" logo">
             </a>
-        
+
         </div>
         <div class="header_right">
-        <a><img src="../img/Foto perfil.png" class="Fotodeperfil"></a>
+            <a><img src="../img/Foto perfil.png" class="Fotodeperfil"></a>
         </div>
         <div></div>
     </header>
-        <div>
-            <main class="Columna">
-            <img src="./img/Absolute_Reality_v16_Crame_una_nave_espacial_futurista_que_se_0.jpg" alt="Descripción de la imagen 1">
-            <img src="./img/Absolute_Reality_v16_Crame_una_nave_espacial_futurista_que_se_1.jpg" alt="Descripción de la imagen 2">
+    <main class="Imagenes">
+        <div class="Imagenes1">
+            <img src="./img/Absolute_Reality_v16_Crame_una_nave_espacial_futurista_que_se_0.jpg"
+                alt="Descripción de la imagen 1">
+            <img src="./img/Absolute_Reality_v16_Crame_una_nave_espacial_futurista_que_se_1.jpg"
+                alt="Descripción de la imagen 2">
             <img src="./img/nave1.jpg" alt="Descripción de la imagen 3">
             <img src="./img/nave2.jpg" alt="Descripción de la imagen 4">
-            <img src="./img/nave4.jpg" alt="Descripción de la imagen 5"> 
-            <img src="./img/Absolute_Reality_v16_Crame_una_nave_espacial_futurista_que_se_1.jpg" alt="Descripción de la imagen 6">
-            </div>
-
-        
-        </main>   
+            <img src="./img/nave4.jpg" alt="Descripción de la imagen 5">
+            <img src="./img/Absolute_Reality_v16_Crame_una_nave_espacial_futurista_que_se_1.jpg"
+                alt="Descripción de la imagen 6">
+        </div>
+    </main>
 </body>
+
 </html>
