--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
     <header>
         <div class="header_left">
             <a href="index.html">
-                <img src="/img/logo.png" width="250" height="250" class=" logo">
+                <img class="logo" src="./img/logo.png" alt="Imágen del logo de empresa" />
             </a>
-
         </div>
         <div class="header_right">
-            <a><img src="../img/Foto perfil.png" class="Fotodeperfil"></a>
+            <img class="foto" src="./img/Foto perfil.png" alt="Foto de Persona">
         </div>
-        <div></div>
     </header>
     <main class="Imagenes">
         <div class="Imagenes1">
