--- a/indexportada.html
+++ b/indexportada.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="contenedor">
-        <div class="img-container" class="boton-sobre-imagen">
+        <div class="img-container boton-sobre-imagen">
             <img src="./img/Presentación-1_pages-to-jpg-0001.jpg" alt="Imagen Principal"> 
             <button id="boton-sobre-imagen" onclick="window.location.href='index.html'">Comencemos</button>
         </div>
