--- a/index2.html
+++ b/index2.html
@@ -14,15 +14,16 @@
         <div>
             <div>
                 <a href="./index.html"><img src="./img/logo.png" alt="Photo Logo" class="img-logo"></a>
-        
+
             </div>
         </div>
     </header>
     <main>
         <div class="text-img-container">
             <div>
-                <a href="./index.html"><img src="./img/Absolute_Reality_v16_Crame_una_nave_espacial_futurista_que_se_0.jpg"
-                    alt="Photo of a rocket" class="img-rocket"></a>
+                <a href="./index.html"><img
+                        src="./img/Absolute_Reality_v16_Crame_una_nave_espacial_futurista_que_se_0.jpg"
+                        alt="Photo of a rocket" class="img-rocket"></a>
             </div>
             <div class="text-container">
                 <h1>Chatarra Galáctica Express</h1>
